--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
+    "dotenv": "^16.5.0",
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.14.1",
+    "nodemailer": "^7.0.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.5.3",
@@ -26,7 +28,8 @@
     "eject": "react-scripts eject",
     "server": "node server.js",
     "dev": "concurrently \"npm run start\" \"npm run server\"",
-    "setup-db": "node setup-db.js"
+    "setup-db": "node setup-db.js",
+    "add-dummy-data": "node add-dummy-data.js"
   },
   "eslintConfig": {
     "extends": [
