added the functionality such that images are shown

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^1.9.0",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.3",
+    "canvas": "^2.11.2",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^4.21.2",
@@ -33,7 +34,10 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "server": "node server.js",
-    "dev": "concurrently \"npm run start\" \"npm run server\"",
+    "server:start": "node server-control.js start",
+    "server:stop": "node server-control.js stop",
+    "server:restart": "node server-control.js restart",
+    "dev": "concurrently \"npm run start\" \"npm run server:start\"",
     "setup-db": "node setup-db.js",
     "add-dummy-data": "node add-dummy-data.js"
   },
