--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.9.0",
-    "bcrypt": "^5.1.1",
+    "bcryptjs": "^3.0.2",
     "body-parser": "^1.20.3",
+    "bootstrap": "^5.3.3",
     "canvas": "^2.11.2",
+    "chart.js": "^4.4.2",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^4.21.2",
@@ -21,7 +23,10 @@
     "mysql": "^2.18.1",
     "mysql2": "^3.14.1",
     "react": "^19.1.0",
+    "react-bootstrap": "^2.10.2",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^19.1.0",
+    "react-hot-toast": "^2.5.2",
     "react-router-dom": "^7.5.3",
     "react-scripts": "5.0.1",
     "socket.io": "^4.8.1",
@@ -62,5 +67,5 @@
   "devDependencies": {
     "concurrently": "^8.2.2"
   },
-  "proxy": "http://localhost:5000"
+  "proxy": "http://localhost:5000/"
 }
