--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^19.1.0",
     "react-hot-toast": "^2.5.2",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.5.3",
     "react-scripts": "5.0.1",
     "socket.io": "^4.8.1",
@@ -44,7 +45,8 @@
     "server:restart": "node server-control.js restart",
     "dev": "concurrently \"npm run start\" \"npm run server:start\"",
     "setup-db": "node setup-db.js",
-    "add-dummy-data": "node add-dummy-data.js"
+    "add-dummy-data": "node add-dummy-data.js",
+    "add-new-tables": "node add-new-tables.js"
   },
   "eslintConfig": {
     "extends": [
