--- a/public/manifest.json
+++ b/public/manifest.json
@@ -8,18 +8,18 @@
       "type": "image/x-icon"
     },
     {
-      "src": "images/logo192.png",
-      "type": "image/png",
+      "src": "images/lost-at-campus-logo.svg",
+      "type": "image/svg+xml",
       "sizes": "192x192"
     },
     {
-      "src": "images/logo512.png",
-      "type": "image/png",
+      "src": "images/lost-at-campus-logo.svg",
+      "type": "image/svg+xml",
       "sizes": "512x512"
     }
   ],
   "start_url": ".",
   "display": "standalone",
-  "theme_color": "#4B0082",
+  "theme_color": "#ff5c41",
   "background_color": "#ffffff"
 }
