--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "multer": "^2.0.0",
     "mysql": "^2.18.1",
     "mysql2": "^3.14.1",
+    "nodemailer": "^7.0.3",
     "react": "^19.1.0",
     "react-bootstrap": "^2.10.2",
     "react-dom": "^19.1.0",
